[metadata]
name = operation_log
version = 0.0.1
author = amuwall
author_email = amuwall@outlook.com
description = A operation log package
long_description = file: README.md
long_description_content_type = text/markdown
url =
project_urls =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =

[options.packages.find]
where = src
